tests/for2.err
20 FOR A(1)=1 to 10:NEXT
           ^
Error: simple variable expected: A
