tests/for2.bas
10 REM FOR WITH ARRAY ELEMENT
20 FOR A(1)=1 to 10:NEXT
